--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 </head>
 <body>
   <!-- Header -->
-  <header>Header</header>
+  <header>
+    <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+    </a>
+    <nav>
+      <ol>
+        <li><a href="">Home</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Sign Up</a></li>
+      </ol>
+    </nav>
+  </header>
   <!-- Main -->
   <main>Main content</main>
   <!-- Footer -->
