--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <a href="index.html">
         <h1 id="logo">Love Running</h1>
     </a>
-    <nav>
-      <ul>
+    <nav >
+      <ul id="menu">
         <li><a href="">Home</a></li>
         <li><a href="">Gallery</a></li>
         <li><a href="">Sign Up</a></li>
