added a hover affect on larger screens

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <nav >
       <ul id="menu">
         <li><a href="" class="active">Home</a></li>
-        <li><a href="" class="hovered">Gallery</a></li>
-        <li><a href="" class="hovered">Sign Up</a></li>
+        <li><a href="" >Gallery</a></li>
+        <li><a href="" >Sign Up</a></li>
       </ul>
     </nav>
   </header>
