added font icon for footer and nav menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- navbar toggle -->
     <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">X</label>
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
     <nav >
       <ul id="menu">
         <li><a href="" class="active">Home</a></li>
@@ -37,6 +37,16 @@
   <!-- Main -->
   <main>Main content</main>
   <!-- Footer -->
-  <footer>Footer</footer>
+  <footer>
+      <ul>
+        <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="vist our face book page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+        
+        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></i></a></li>
+
+  </footer>
+ <!-- font Awesome kit -->
+  <script src="https://kit.fontawesome.com/be62d1111c.js" crossorigin="anonymous"></script>
 </body>
 </html>
