--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
   <main>Main content</main>
   <!-- Footer -->
   <footer>
-      <ul>
+      <ul id="social-networks">
         <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="vist our face book page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
         
         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+        
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a></li>
 
         <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></i></a></li>
 
