added circular image to reason section

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
 
             </div>
 
+              <div id="benfits-image">
+                <div id="circle-over-bg" >
 
+                </div>
+              </div>
 
           </div>
 
