added meet up time contect

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>Dublin docklands & Phoenix Park</h3>
           </div>
         </section>
-        <section id="reasons">Why Love Running With Us?
+        <section id="reasons"><h2>Why love running with us?</h2>
           <div id="benefits">
             <div id="benefits-physical">
               <div>
