--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
           <!-- meetup times section -->
         <section  id="meetups">
-          <h2>Meet up Time</h2>
+          <h2 class="hidden-heading">Meet up Time</h2>
           <div id="times">
             <div>
               <h3>URBAN <i class="fa-solid fa-city"></i></h3>
