--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
   </header>
   <!-- Main -->
   <main id="gallery">
-      <div id="photes">
+      <div id="photos">
         <img src="assets\images\athletes.webp" alt="two athletesrunning together">
         <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
         <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
