--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
           <label for="email_address">Email Address</label>
           <input type="email" name="email_address" id="email_address" class="text-input" required>
           <br>
-          <div class="radio-buttons">
+          <div id="radio-buttons">
               <div>
                   <label for="road">Road</label>
                   <input type="radio" name="running_preference" id="road" value="road" required checked>
