--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div id="benefits-mental">
               <div>
-                <h3>FEEL FREE <i class="fa-brands fa-fly"></i></i></h3>
+                <h3>FEEL FREE <i class="fa-brands fa-fly"></i></h3>
                 <hr>
                 <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.</p>
               </div>
