fixed error on galary.htlm page for validation

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
   <!-- Main -->
   <main id="gallery">
       <div id="photos">
-        <img src="assets\images\athletes.webp" alt="two athletesrunning together">
+        <img src="assets/images/athletes.webp" alt="two athletesrunning together">
         <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
         <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
         <img src="assets/images/man.webp" alt="Man at charity paint running festival">
@@ -56,11 +56,11 @@
       <ul id="social-networks">
         <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="vist our face book page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
         
-        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></li>
         
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a></li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></li>
 
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></i></a></li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></i></li>
 
   </footer>
  <!-- font Awesome kit -->
