--- a/gallery.html
+++ b/gallery.html
@@ -58,9 +58,9 @@
         
         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></li>
         
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></li>
 
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></i></li>
+        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></li>
 
   </footer>
  <!-- font Awesome kit -->
