--- a/gallery.html
+++ b/gallery.html
@@ -1,69 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Meta tags for search engines -->
-  <meta name="description"
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description"
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
-  <title>Love Running</title>
-  <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="assets/css/style.css">
+    <title>Love Running</title>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-  <!-- Header -->
-  <header>
-    <a href="gallery.html">
-        <h1 id="logo">Love Running</h1>
-    </a>
+    <!-- Header -->
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html" class="active">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- navbar toggle -->
-    <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
-    <nav >
-      <ul id="menu">
-        <li><a href="index.html" >Home</a></li>
-        <li><a href="gallery.html" class="active">Gallery</a></li>
-        <li><a href="signup.html" >Sign Up</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!-- Main -->
-  <main id="gallery">
-      <div id="photos">
-        <img src="assets/images/athletes.webp" alt="two athletesrunning together">
-        <img src="assets/images/girls.webp" alt="Three girls at charity paint running festival">
-        <img src="assets/images/runner3.webp" alt="Solo male runner jogging on beach">
-        <img src="assets/images/man.webp" alt="Man at charity paint running festival">
-        <img src="assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
-        <img src="assets/images/runner2.webp" alt="Runners competing in marathon">
-        <img src="assets/images/runner4.webp" alt="Solo female runner jogging on beach">
-        <img src="assets/images/running_gang.webp" alt="Large group of runners taking part in a marathon on a rainy day">
-        <img src="assets/images/mud-run.webp" alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+    <!-- Main content -->
+    <main>
+        <section id="signup">
+            <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heartbeat"></i> Let's get you signed up!</h2>
+                <label for="first_name">First Name</label>
+                <input type="text" name="first_name" id="first_name" class="text-input" required>
+                <br>
+                <label for="last_name">Last Name</label>
+                <input type="text" name="last_name" id="last_name" class="text-input" required>
+                <br>
+                <label for="email_address">Email Address</label>
+                <input type="email" name="email_address" id="email_address" class="text-input" required>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required checked>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Run!</button>
+            </form>
+        </section>
+    </main>
 
-      </div>
+    <!-- Footer -->
+    <footer>
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 
-
-  </main>
-  <!-- Footer -->
-  <footer>
-      <ul id="social-networks">
-        <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="vist our face book page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
-        
-        <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="vist our Instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></li>
-        
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></li>
-
-        <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="vist our twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></li>
-
-  </footer>
- <!-- font Awesome kit -->
-  <script src="https://kit.fontawesome.com/be62d1111c.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
